// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portuguese language Empty input 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 4,
    "title": "Pilhas Alcalinas AA — Embalagem com 12",
  },
  Object {
    "id": 20,
    "rating": 3,
    "title": "Cabo Lightning para USB-A",
  },
  Object {
    "id": 30,
    "rating": 2,
    "title": "Escova de dentes elétrica",
  },
  Object {
    "id": 40,
    "rating": 1,
    "title": "Sacos de armazenamento a vácuo",
  },
]
`;

exports[`Portuguese language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "[Escova] [de] [dentes] [elétrica]",
  },
  Object {
    "id": 40,
    "rating": 1,
    "title": "Sacos [de] armazenamento a vácuo",
  },
]
`;

exports[`Portuguese language Normalization 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "Escova de dentes [elétric]a",
  },
]
`;

exports[`Portuguese language Partiles 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "Escova de [de]ntes elétrica",
  },
  Object {
    "id": 40,
    "rating": 1,
    "title": "Sacos [de] armazenamento a vácuo",
  },
]
`;

exports[`Portuguese language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 4,
    "title": "Pilhas [Alcalina]s AA — Embalagem com 12",
  },
]
`;
